--- a/src/public/template/index.html
+++ b/src/public/template/index.html
@@ -43,7 +43,7 @@
 
           <div class="container px-lg-5 mt-5">
             <div class="row justify-content-center">
-                <div class="m-lg-2">
+                <div class="m-lg-4">
                     <div class="card" style="width: 18rem;">
                         <img src="https://cdn.wizard.com.br/wp-content/uploads/2017/07/02165739/quiz-palavras-em-ingles-plural-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 
-                <div class="m-lg-2">
+                <div class="m-lg-4">
                     <div class="card" style="width: 18rem;">
                         <img src="https://cdn.wizard.com.br/wp-content/uploads/2017/07/02165739/quiz-palavras-em-ingles-plural-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -65,7 +65,7 @@
                     </div>
                 </div>
 
-                <div class="m-lg-2">
+                <div class="m-lg-4">
                     <div class="card" style="width: 18rem;">
                         <img src="https://cdn.wizard.com.br/wp-content/uploads/2017/07/02165739/quiz-palavras-em-ingles-plural-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
 
-                <div class="m-lg-2">
+                <div class="m-lg-4">
                     <div class="card" style="width: 18rem;">
                         <img src="https://cdn.wizard.com.br/wp-content/uploads/2017/07/02165739/quiz-palavras-em-ingles-plural-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="m-lg-2">
+                <div class="m-lg-4">
                     <div class="card" style="width: 18rem;">
                         <img src="https://cdn.wizard.com.br/wp-content/uploads/2017/07/02165739/quiz-palavras-em-ingles-plural-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
 
-                <div class="m-lg-2">
+                <div class="m-lg-4">
                     <div class="card" style="width: 18rem;">
                         <img src="https://cdn.wizard.com.br/wp-content/uploads/2017/07/02165739/quiz-palavras-em-ingles-plural-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -113,6 +113,6 @@
           <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-          <script src="requests.js"></script>
+          <script src="js/index.js"></script>
     </body>
 </html>
