--- a/src/public/template/index.html
+++ b/src/public/template/index.html
@@ -43,7 +43,7 @@
 
           <div class="container px-lg-5 mt-5">
             <div class="row justify-content-center">
-                <div class="m-lg-4">
+                <!--<div class="m-lg-4">
                     <div class="card" style="width: 18rem;">
                         <img src="https://cdn.wizard.com.br/wp-content/uploads/2017/07/02165739/quiz-palavras-em-ingles-plural-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -107,7 +107,7 @@
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
           </div>
           <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
